# shard

./: .gitignore  FLEET_STATE.md  README.md  SHARDV2.md  STATE.md  pyproject.toml
docs/: ADMISSION_SPEC.md  DEPLOY_READINESS.md  HETERO_DEVICES.md  INTEGRATION.md  LAUNCH.md  LEG7_8_PLAN.md  M25_ENGINE.md  MLX_RUNTIME.md  ROADMAP.md  THROUGHPUT_AWARE_SCHEDULING.md
phase0/: bench.py  eagle_draft.py  fastverify.py  heal.py  heal_hot.py  heal_hot_libp2p.py  launch_libp2p.py  launch_ngram.py  launch_oss.py  m25_gateway.py  m25_pipe.py  m25_pull_range.py  m25_pull_verified.py  m25_scatter.py  m25_scatter_pipe.py  m25_stage.py  ngram_draft.py  node_kv.py  node_pull.py  pipeline.py  plan_ring.py  plan_ring_test.py  proof_receipt.py  publish_manifest.py  safe_kill.sh  scheduler_svc.py  specbench.py  specdec.py  specpipe.py  stage_bootstrap.sh  throughput_test.py  tree_spec.py  wire.py
research/: chain_class_ref.py  draft_server.py  fastverify_graph.py  glm_correctness.py  glm_nvfp4_check.py  glm_stage_nvfp4_full.py  glm_swarm_nvfp4_kv.py  graph_aux_check.py  h1_bench.py  h1_build_corpora.py  hetero_moe_probe.py  hetero_moe_xcheck.py  m25_batch_eagle_test.py  m25_batch_sweep.py  m25_batch_test.py  m25_batchattn_test.py  m25_batched_moe_bench.py  m25_ctx_table.py  m25_draft_batch_test.py  m25_fp8_needle.py  m25_honest_bench.py  m25_lever_bench.py  m25_paper_bench.py  m25_tree_batch_test.py  m25_usability_report.py  patch_vllm_dense.py  pod_9b_dump.py  ring_target_dump.py  suffix_replay.py  test_draft_accept_bench.py  test_h1_bench.py  test_kv.py  tree_graph_check.py  tree_pad_isolate.py
scratchpad/: sim_network.py
shard/: challenge.py  coordinate.py  fetch.py  heal.py  manifest.py  mlx_runtime.py  (+11 more)
(+135 files in other folders)
