[project]
name = "shard"
version = "0.0.0"
description = "c0mpute's decentralized inference engine: one model, split across a swarm of consumer gpus"
requires-python = ">=3.11"
dependencies = [
    # wire security (phase 0): authenticated encryption for the inter-stage transport
    # (phase0/wire.py). required to import any node -- the wire won't load without it.
    "cryptography>=42",
    # shard/transport.py imports both at module level (activation codec + framing) --
    # a clean-env install of the advertised `shard*` modules must be importable. box
    # setups may pre-install a specific CUDA torch build; pip keeps a satisfying one.
    "numpy>=1.26",
    "torch>=2.1",
    # per-node serving engine (we wrap it, don't rebuild it)
    # "sglang",
    # transport (phase 0-1): quic in python, lift hot path to rust later
    # "aioquic",
]

[project.optional-dependencies]
# Apple-silicon backend: shard/mlx_runtime.py imports these lazily (Mac-only)
mlx = ["mlx>=0.21", "mlx-lm>=0.20"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shard*"]

[tool.pytest.ini_options]
# a plain root `pytest` must NEVER discover research/ or scratchpad/ scripts --
# several execute real work (model loads, subprocesses, network) at import time.
testpaths = ["tests"]
markers = [
    "hardware: needs specific hardware attached (any accelerator or device)",
    "integration: spawns real processes / crosses process boundaries (no GPU)",
    "gpu: needs a CUDA GPU",
    "mlx: needs Apple silicon + mlx installed",
]
